--- a/frontend/rental/src/App.css
+++ b/frontend/rental/src/App.css
@@ -2,13 +2,15 @@
   text-align: center;
 }
 
+.list-Box{
+  position: relative;
+  clear: both;
+  height: 400px;
+  width: 100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-.list-Box{
-  height: 480pt;
-  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
