--- a/frontend/rental/src/App.css
+++ b/frontend/rental/src/App.css
@@ -10,13 +10,6 @@
 }
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -32,15 +25,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .banner {
@@ -100,7 +84,7 @@
   margin-left: 25px;
 }
 
-.banner img {
+.anime-image {
   animation: updown 3s linear infinite;
 }
 @keyframes updown {
@@ -175,14 +159,10 @@
 .banner button:hover svg {
   margin-left: 25px;
 }
-.banner img {
-  animation: updown 3s linear infinite;
-}
 .social-icon {
   display: inline-block;
   margin-left: 14px;
 }
-
 
 .social-icon a {
   width: 42px;
@@ -281,7 +261,7 @@
 }
 .nav-link#projects-tabs-tab-first {
   border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 55px 0px 0px 55px;
+  border-radius: 55px 0 0 55px;
 }
 .nav-link#projects-tabs-tab-second {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
@@ -334,12 +314,4 @@
   font-weight: 400;
   font-size: 15px;
   letter-spacing: 0.8px;
-}
-.background-image-right {
-  top: 20%;
-  position: absolute;
-  bottom: 0;
-  width: 35%;
-  right: 0;
-  z-index: -4;
 }
