--- a/frontend/rental/src/App.css
+++ b/frontend/rental/src/App.css
@@ -335,4 +335,15 @@
   .filters {
     display: none !important;
   }
+
+  .footer {
+    position: relative;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .footer{
+    position: fixed;
+}
+
+
 }
